--- a/global-config.json
+++ b/global-config.json
@@ -1,4 +1,4 @@
 {
-  "repoConfigMode": "createOnboardingPR"
+  "repoConfigMode": "createOnboardingPR",
   "ignoreSpecificVulnerabilities": "true"
 }
