--- a/repo-config.json
+++ b/repo-config.json
@@ -12,7 +12,8 @@
     "scanPullRequests": true,
     "incrementalScan": true,
     "baseBranches": [],
-    "snippetSize": 10
+    "snippetSize": 10,
+    "enableSecretsScan" : true
   },
   "checkRunSettings": {
     "vulnerableCheckRunConclusionLevel": "failure",
