--- a/repo-config.json
+++ b/repo-config.json
@@ -22,7 +22,7 @@
   },
   "checkRunSettingsSAST": {
     "checkRunConclusionLevel": "failure",
-    "severityThreshold": "low"
+    "severityThreshold": "high"
   },
   "issueSettings": {
     "minSeverityLevel": "MEDIUM",
